Rename side icon button from 'Call' to 'Call Variants'.  Rework buttons that require word wrap to work correctly on FireFox. https://github.com/tonydisera/gene.iobio/issues/259

--- a/assets/css/sass/_slideout.sass
+++ b/assets/css/sass/_slideout.sass
@@ -188,7 +188,7 @@
     white-space: normal !important
     background-color: transparent !important
     font-weight: 100
-    display: inline-block
+    display: block
     padding-top: 4px !important
     top: 0 !important
     margin-left: -3px
